Added implementation for current timers and games
